# amkb-sdk

./: .gitignore  README.md  conftest.py  pyproject.toml
src/amkb/: __init__.py  errors.py  filters.py  lineage.py  refs.py  snapshots.py  store.py  types.py  validation.py
src/amkb/conformance/: __init__.py  conftest.py  fixtures.py  test_l1_core.py  test_l2_lineage.py  test_l3_transactional.py  test_l4a_structural.py  test_l4b_intent.py
src/amkb/reference/: __init__.py
tests/: test_filters_evaluate.py  test_lineage.py  test_snapshots.py  test_validation.py
tests/impls/: dict_store.py
